<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterDetailsFragment"
    android:background="#2D00BCD4">


    <ImageView
        android:id="@+id/iv_details_character"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_details_character"
        app:layout_constraintStart_toStartOf="@+id/iv_details_character"
        app:layout_constraintTop_toBottomOf="@+id/iv_details_character">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp"
            >

            <TextView
                android:id="@+id/tv_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/tv"
                android:text="@string/name"
                />
            <TextView
                android:id="@+id/tv_details_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/tv"
                android:text="@string/species"
                />
            <TextView
                android:id="@+id/tv_details_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/tv"
                android:text="@string/gender"
                />
            <TextView
                android:id="@+id/tv_details_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/tv"
                android:text="@string/status"
                />
            <TextView
                android:id="@+id/tv_details_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/tv"
                android:text="@string/location"
                />
            <TextView
                android:id="@+id/tv_details_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                style="@style/tv"
                android:text="@string/episodes"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>